Refine install docs: systemd-only services, OpenSearch REST communication, OS/Redis prerequisite versions, rendering fixes FD-18456